traversal.snake.Snake.scala.error
Compilation error:
Snake:41: error: Unmatched closing brace '}' ignored here
}
^